<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        android:title="@string/str_search" />
    <item
        android:id="@+id/platform_kg"
        android:title="@string/str_kugou"
        app:showAsAction="never"/>
    <item
        android:id="@+id/platform_qq"
        android:title="@string/str_qqmusic"
        app:showAsAction="never"/>
    <item
        android:id="@+id/platform_wy"
        android:title="@string/str_wyyyy"
        app:showAsAction="never"/>
    <item
        android:id="@+id/platform_kw"
        android:title="@string/str_kuwo"
        app:showAsAction="never"/>
</menu>